<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fo.aivot.idem.PersonView">
    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="match_parent"
        android:text="@string/adresses"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="17dp" />
    <LinearLayout
        android:layout_below="@+id/addressTitle"
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/phoneTitle"
        android:layout_width="match_parent"
        android:layout_below="@+id/addressLayout"
        android:text="@string/phoneNumbers"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="17dp" />
    <LinearLayout
        android:layout_below="@+id/phoneTitle"
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <com.xgc1986.ripplebutton.widget.RippleButton
        android:layout_marginTop="50dp"
        android:layout_below="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:text="@string/save_contact"
        android:textColor="@color/white"
        app:buttonColor="#F44336"
        app:rippleColor="#B71C1C"/>

</RelativeLayout>
</ScrollView>